tests/errors/parser/invalid-width3.expect
---CODE---
1
---STDERR---
Error: Calyx Parser:  --> 4:12
  |
4 |     r.in = 1'o10;âŠ
  |            ^---^
  |
  = Cannot represent given literal '10' in 1 bit
